namespace Core
{
    public abstract class Player
    {
        
    }
}
